--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,15 @@
 name: ovanet
 channels:
   - pytorch
-  - conda-forge
 dependencies:
   - python=3.6.9
-  - cudatoolkit=10.2
-  - pytorch=1.6.0
-  - torchvision=0.7.0
-  - packaging
-  - pyyaml
-  - easydict
-  - scikit-learn
+  - cudatoolkit=11.0
+  - pytorch=1.7.0
+  - torchvision=0.8.0
+  - torchaudio=0.7.0
+  - pip
+  - pip:
+    - packaging
+    - pyyaml
+    - easydict
+    - scikit-learn
